# project-logs-mcp

./: .dockerignore  .env.example  .gitignore  API_DEPENDENCY_STRUCTURE.md  CONTRIBUTING.md  Dockerfile  README.md  TEST_PROMPTS.md  __init__.py  _auth.py  _constants.py  api_client.py  auth.py  erp_browser_auth.py  erp_browser_sessions.py  erp_client.py  example_config.json  oauth_server.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-sse.txt  requirements.txt  run_server.py  run_server.sh  server.py  server_sse.py
.github/: dependabot.yml
.github/workflows/: build-and-push.yml
clients/: __init__.py  _base.py  leaves.py  timelogs.py
docs/: architecture-expansion-plan.md  architecture.md  tool-reference.md
tests/: conftest.py  test_clients_base.py  test_clients_leaves.py  test_clients_timelogs.py  test_erp_client.py  test_feature_flags.py  test_security.py  test_server.py  test_tools_leaves.py  test_tools_timelogs.py
tools/: __init__.py  leaves.py  timelogs.py
