[project]
name = "erp-mcp"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "A", "N", "S", "C4", "PT", "RUF"]
ignore = ["S101"]  # assert is fine in non-production code

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117", "SIM114", "S101", "S105", "S106", "S107", "RUF012"]
